--- a/.gitignore
+++ b/.gitignore
@@ -26,6 +26,7 @@ DerivedData
 # Add this line if you want to avoid checking in source code from Carthage dependencies.
 Carthage/Checkouts
 Carthage/Build
+*.framework.zip
 
 # We recommend against adding the Pods directory to your .gitignore. However
 # you should judge for yourself, the pros and cons are mentioned at:
